Modified facebook image to be more visually appealing and more like original facebook logo.

--- a/documentation.html
+++ b/documentation.html
@@ -1,5 +1,5 @@
 <html lang="de-DE" style="zoom: 100%; " autopagermatchedrules="1" class="translated-ltr"><head>
-    <title>Documentation - H "socialSharePrivacy" plug-in</title>
+    <title>Documentation - socialSharePrivacy plug-in</title>
     <meta charset="UTF-8">
     <meta name="author" content="Hilko Holweg, Sebastian Hilbig, Nicolas Heiringhoff, Juergen Schmidt - Heise Zeitschriften Verlag GbmH &amp; Co. KG">
     <meta name="description" content="Dokumentation und Einbindung des heise SocialSharePrivacy-Plug-Ins">
